--- a/src/app/task-details/task-details.component.html
+++ b/src/app/task-details/task-details.component.html
@@ -155,7 +155,8 @@
 
 <ng-template #task_time>
     <div class="time-container">
-        <ngb-timepicker></ngb-timepicker>
+        <input paraInput [paraTimepickerTrigger]="picker" >
+        <para-timepicker #picker [time]="getTime()" (timeChange)="timeChange($event)"></para-timepicker>
        <!-- <input class="form-control" [ngxTimepicker]="timepicker" >
        <ngx-material-timepicker #timepicker [defaultTime]="getTime()" (timeChanged)="timeChange($event)"></ngx-material-timepicker> -->
     </div>
