--- a/src/app/project-details/project-details.component.html
+++ b/src/app/project-details/project-details.component.html
@@ -4,47 +4,25 @@
         <button class="close-button" (click)="closeView()">X</button>
     </div>
     <form class="project-form">
-
-        <mat-expansion-panel class="form-group" [expanded]='true'>
-            <mat-expansion-panel-header class="form-group-header">
-                Nazwa
-            </mat-expansion-panel-header>
-            <ng-container [ngTemplateOutlet]="project_name"></ng-container>
-        </mat-expansion-panel>
-
-        <mat-expansion-panel class="form-group" [expanded]="getModel().getProject().getDescription()!=null">
-            <mat-expansion-panel-header class="form-group-header">
-                Opis
-            </mat-expansion-panel-header>
-            <ng-container [ngTemplateOutlet]="project_description"></ng-container>
-        </mat-expansion-panel>
-
         <mat-expansion-panel class="form-group" [expanded]="true">
             <mat-expansion-panel-header class="form-group-header">
-                Typ
+                Główne
             </mat-expansion-panel-header>
-            <ng-container [ngTemplateOutlet]="project_type"></ng-container>
-        </mat-expansion-panel>
-    
-        <mat-expansion-panel class="form-group" [expanded]="true">
-            <mat-expansion-panel-header class="form-group-header">
-                Stan
-            </mat-expansion-panel-header>
-            <ng-container [ngTemplateOutlet]="project_status"></ng-container>
+            <ng-container [ngTemplateOutlet]="project_main_group"></ng-container>
         </mat-expansion-panel>
 
-        <mat-expansion-panel class="form-group" [expanded]="getModel().getProject().getStartDate()!=null">
+        <mat-expansion-panel class="form-group">
             <mat-expansion-panel-header class="form-group-header">
-                Data początkowa
+                Informacje
             </mat-expansion-panel-header>
-            <ng-container [ngTemplateOutlet]="project_start_date"></ng-container>
+            <ng-container [ngTemplateOutlet]="project_info_group"></ng-container>
         </mat-expansion-panel>
-    
-        <mat-expansion-panel class="form-group" [expanded]="getModel().getProject().getEndDate()!=null">
+
+        <mat-expansion-panel class="form-group">
             <mat-expansion-panel-header class="form-group-header">
-                Data końcowa
+                Czas
             </mat-expansion-panel-header>
-            <ng-container [ngTemplateOutlet]="project_end_date"></ng-container>
+            <ng-container [ngTemplateOutlet]="project_time_group"></ng-container>
         </mat-expansion-panel>
 
         <mat-expansion-panel class="form-group" [expanded]="getModel().getProject().getStages().length > 0">
@@ -56,65 +34,100 @@
     </form>
 </div>
 
+<ng-template #project_main_group>
+    <ng-container [ngTemplateOutlet]="project_name"></ng-container>
+    <ng-container [ngTemplateOutlet]="project_description"></ng-container>
+</ng-template>
+
+<ng-template #project_info_group>
+    <ng-container [ngTemplateOutlet]="project_status"></ng-container>
+    <ng-container [ngTemplateOutlet]="project_type"></ng-container>
+</ng-template>
+
+<ng-template #project_time_group>
+    <ng-container [ngTemplateOutlet]="project_start_date"></ng-container>
+    <ng-container [ngTemplateOutlet]="project_end_date"></ng-container>
+</ng-template>
+
 <ng-template #project_name>
-    <input type="text" class="form-control" id="project-name" name='name' autocomplete="off"
+    <div class="form-container">
+        <input type="text" class="form-control" id="project-name" name='name' autocomplete="off" placeholder="Nazwa"
             [ngModel]='getModel().getProject().getName()' (ngModelChange)="getModel().getProject().setName($event)"
             (keyup.enter)="updateProject()" (focusout)="updateProject()">
-    <div *ngIf="!getValidator().isNameValid() && getChangeDetector().isNameChanged()"
-    class="invalid-feedback">Nazwa nie może być pusta</div>
+        <div *ngIf="!getValidator().isNameValid() && getChangeDetector().isNameChanged()"
+            class="invalid-feedback">
+            Nazwa nie może być pusta
+        </div>
+    </div>
+    
 </ng-template>
 
 <ng-template #project_description>
-    <textarea class="form-control" id="project-description" name="description" rows="4"
-        [ngModel]='getModel().getProject().getDescription()' (ngModelChange)="getModel().getProject().setDescription($event)"
-        (keyup.enter)="updateProject()" (focusout)="updateProject()">
-    </textarea>
+    <div class="form-container">
+        <textarea class="form-control" id="project-description" name="description" rows="4" placeholder="Opis"
+            [ngModel]='getModel().getProject().getDescription()' (ngModelChange)="getModel().getProject().setDescription($event)"
+            (keyup.enter)="updateProject()" (focusout)="updateProject()">
+        </textarea>
+    </div>
 </ng-template>
 
 <ng-template #project_type>
-    <select class="form-control" id="project-type" name="type"
-        [ngModel]='getModel().getProject().getType()' (ngModelChange)="getModel().getProject().setType($event)"
-        (change)="updateProject()">
-        <option [ngValue]="projectType.DEFAULT">Nieokreślony</option>
-        <option [ngValue]="projectType.SMALL">Mały</option>
-        <option [ngValue]="projectType.MEDIUM">Średni</option>
-        <option [ngValue]="projectType.BIG">Duży</option>
-    </select>
+    <div class="form-container">
+        <label class="form-label">Typ</label>
+        <select class="form-control" id="project-type" name="type"
+            [ngModel]='getModel().getProject().getType()' (ngModelChange)="getModel().getProject().setType($event)"
+            (change)="updateProject()">
+            <option [ngValue]="projectType.DEFAULT">Nieokreślony</option>
+            <option [ngValue]="projectType.SMALL">Mały</option>
+            <option [ngValue]="projectType.MEDIUM">Średni</option>
+            <option [ngValue]="projectType.BIG">Duży</option>
+        </select>
+    </div>
+    
 </ng-template>
 
 <ng-template #project_status>
-    <select class="form-control" id="project-status" name="status"
-        [ngModel]='getModel().getProject().getStatus()' (ngModelChange)="getModel().getProject().setStatus($event)"
-        (change)="updateProject()">
-        <option [ngValue]="status.STARTED">Aktywny</option>
-        <option [ngValue]="status.ENDED">Zakończony</option>
-        <option [ngValue]="status.CANCELED">Anulowany</option>
-        <option [ngValue]="status.AWAITING">Oczekujący</option>
-    </select>
+    <div class="form-container">
+        <label class="form-label">Stan</label>
+        <select class="form-control" id="project-status" name="status"
+            [ngModel]='getModel().getProject().getStatus()' (ngModelChange)="getModel().getProject().setStatus($event)"
+            (change)="updateProject()">
+            <option [ngValue]="status.STARTED">Aktywny</option>
+            <option [ngValue]="status.ENDED">Zakończony</option>
+            <option [ngValue]="status.CANCELED">Anulowany</option>
+            <option [ngValue]="status.AWAITING">Oczekujący</option>
+        </select>
+    </div>
 </ng-template>
 
 <ng-template #project_start_date>
-    <div class="datepicker-container">
-        <input class='form-control' id="project-start-date" name="start-date" autocomplete="off"
-        [matDatepicker]="startDatePicker"  
-        [ngModel]='getModel().getProject().getStartDate()' (ngModelChange)="getModel().getProject().setStartDate($event)" 
-        (dateChange)="updateProject()">
-        <mat-datepicker-toggle [for]="startDatePicker" class='datepicker'></mat-datepicker-toggle>
-        <mat-datepicker #startDatePicker></mat-datepicker>
-    </div>  
+    <div class="form-container">
+        <label class="form-label">Data rozpoczecia</label>
+        <div class="datepicker-container">
+            <input class='form-control' id="project-start-date" name="start-date" autocomplete="off"
+            [matDatepicker]="startDatePicker"  
+            [ngModel]='getModel().getProject().getStartDate()' (ngModelChange)="getModel().getProject().setStartDate($event)" 
+            (dateChange)="updateProject()">
+            <mat-datepicker-toggle [for]="startDatePicker" class='datepicker'></mat-datepicker-toggle>
+            <mat-datepicker #startDatePicker></mat-datepicker>
+        </div>  
+    </div>
 </ng-template>
 
 <ng-template #project_end_date>
-    <div class="datepicker-container">
-        <input matInput class='form-control' id="project-end-date" name="end-date" autocomplete="off"
-        [matDatepicker]="endDatePicker"
-        [ngModel]='getModel().getProject().getEndDate()' (ngModelChange)="getModel().getProject().setEndDate($event)"
-        (dateChange)="updateProject()">
-        <mat-datepicker-toggle [for]="endDatePicker" class="datepicker"></mat-datepicker-toggle>
-        <mat-datepicker #endDatePicker></mat-datepicker>
+    <div class="form-container">
+        <label class="form-label">Data końcowa</label>
+        <div class="datepicker-container">
+            <input matInput class='form-control' id="project-end-date" name="end-date" autocomplete="off"
+            [matDatepicker]="endDatePicker"
+            [ngModel]='getModel().getProject().getEndDate()' (ngModelChange)="getModel().getProject().setEndDate($event)"
+            (dateChange)="updateProject()">
+            <mat-datepicker-toggle [for]="endDatePicker" class="datepicker"></mat-datepicker-toggle>
+            <mat-datepicker #endDatePicker></mat-datepicker>
+        </div>
+        <div *ngIf="!getValidator().isEndDateValid() && getChangeDetector().isEndDateChanged()"
+        class="invalid-feedback">Data końcowa nie może być wcześniejsza niż początkowa</div>
     </div>
-    <div *ngIf="!getValidator().isEndDateValid() && getChangeDetector().isEndDateChanged()"
-    class="invalid-feedback">Data końcowa nie może być wcześniejsza niż początkowa</div>
 </ng-template>
 
 <ng-template #project_stages>
