--- a/src/app/task-details/task-details.component.html
+++ b/src/app/task-details/task-details.component.html
@@ -13,58 +13,23 @@
 
         <mat-expansion-panel class="form-group" [expanded]="true">
             <mat-expansion-panel-header class="form-group-header">
-                Nazwa
+                Główne 
             </mat-expansion-panel-header>
-            <ng-container [ngTemplateOutlet]="task_name_group"></ng-container>
-        </mat-expansion-panel>
-
-        <mat-expansion-panel class="form-group" [expanded]="getState().isDescriptionExtended()">
-            <mat-expansion-panel-header class="form-group-header">
-                Opis
-            </mat-expansion-panel-header>
-            <ng-container [ngTemplateOutlet]="task_description"></ng-container>
-        </mat-expansion-panel>
-        
-        <mat-expansion-panel class="form-group" [expanded]="getState().isStatusExtended()">
-            <mat-expansion-panel-header class="form-group-header">
-                Stan
-            </mat-expansion-panel-header>
-            <ng-container [ngTemplateOutlet]="task_status"></ng-container>
-        </mat-expansion-panel>
-
-        <mat-expansion-panel class="form-group" [expanded]='getState().isPriorityExtended()'>
-            <mat-expansion-panel-header class="form-group-header">
-                Priorytet
-            </mat-expansion-panel-header>
-            <ng-container [ngTemplateOutlet]="task_priority"></ng-container>
-        </mat-expansion-panel>
-
-        <mat-expansion-panel class="form-group" [expanded]="getState().isDateExtended()">
-            <mat-expansion-panel-header class="form-group-header">
-                Data
-            </mat-expansion-panel-header>
-            <ng-container [ngTemplateOutlet]="task_date"></ng-container>
+            <ng-container [ngTemplateOutlet]="main_group"></ng-container>
         </mat-expansion-panel>
 
         <mat-expansion-panel class="form-group" >
             <mat-expansion-panel-header class="form-group-header">
-                Godzina
+                Informacje
             </mat-expansion-panel-header>
-            <ng-container [ngTemplateOutlet]="task_time"></ng-container>
+            <ng-container [ngTemplateOutlet]="info_group"></ng-container>
         </mat-expansion-panel>
 
-        <mat-expansion-panel class="form-group" [expanded]="getState().isEndDateExtended()">
+        <mat-expansion-panel class="form-group">
             <mat-expansion-panel-header class="form-group-header">
-                Data końcowa
+                Czas
             </mat-expansion-panel-header>
-            <ng-container [ngTemplateOutlet]="task_end_date"></ng-container>
-        </mat-expansion-panel>
-      
-        <mat-expansion-panel class="form-group" [expanded]="getState().isPlannedTimeExtended()">
-            <mat-expansion-panel-header class="form-group-header">
-                Planowany czas
-            </mat-expansion-panel-header>
-            <ng-container [ngTemplateOutlet]="task_planned_time"></ng-container>
+            <ng-container [ngTemplateOutlet]="time_group"></ng-container>
         </mat-expansion-panel>
 
         <mat-expansion-panel class="form-group" [expanded]="getState().isLabelsExtended()">
@@ -74,22 +39,14 @@
             <ng-container [ngTemplateOutlet]="task_labels_group"></ng-container>
         </mat-expansion-panel>
 
-        <mat-expansion-panel class="form-group" [expanded]="getState().isStageExtended()">
-            <mat-expansion-panel-header class="form-group-header">
-                Etap projektu
-            </mat-expansion-panel-header>
-            <ng-container [ngTemplateOutlet]="task_stage"></ng-container>
-        </mat-expansion-panel>
-
         <mat-expansion-panel class="form-group" [expanded]="getState().isSubtasksExtended()">
             <mat-expansion-panel-header class="form-group-header">
                 Kroki ({{getFinishedSubtasks(getModel().getTask())}} / {{getModel().getTask().getSubtasks().length}})
             </mat-expansion-panel-header>
             <ng-container [ngTemplateOutlet]="task_subtasks_group"></ng-container>
-        </mat-expansion-panel>
+        </mat-expansion-panel> 
     </form>
 </div>
-
 
 <mat-menu #appMenu="matMenu" class="my-menu">
     <div mat-menu-item *ngFor="let label of getLabels().getModel().getLabels()" class="list-item small-list-item"
@@ -103,25 +60,48 @@
     <button (click)="getLabels().acceptSelectedLabels()">Gotowe</button>
 </mat-menu>
 
+<ng-template #main_group>
+    <ng-container [ngTemplateOutlet]="task_name_group"></ng-container>
+    <ng-container [ngTemplateOutlet]="task_description"></ng-container>
+</ng-template>
+
+<ng-template #info_group>
+    <ng-container [ngTemplateOutlet]="task_status"></ng-container>
+    <ng-container [ngTemplateOutlet]="task_priority"></ng-container>
+    <ng-container [ngTemplateOutlet]="task_stage"></ng-container>
+</ng-template>
+
+<ng-template #time_group>
+    <ng-container [ngTemplateOutlet]="task_date"></ng-container>
+    <ng-container [ngTemplateOutlet]="task_time"></ng-container>
+    <ng-container [ngTemplateOutlet]="task_end_date"></ng-container>
+    <ng-container [ngTemplateOutlet]="task_planned_time"></ng-container>
+</ng-template>
+
 <ng-template #task_name_group> 
-    <input type="text" class="form-control" id="task-name" name='name' autocomplete="off"
+    <div class="form-container">
+        <input type="text" class="form-control" id="task-name" name='name' autocomplete="off" placeholder="Nazwa"
             [ngModel]='getModel().getTask().getName()' (ngModelChange)="getModel().getTask().setName($event)"
-            (keyup.enter)="updateTask()" (focusout)="updateTask()"
-            >
-    <span *ngIf="!getValidator().isNameValid() && getChangeDetector().isNameChanged()"
-    class="invalid-feedback">Nazwa nie może być pusta</span>
+            (keyup.enter)="updateTask()" (focusout)="updateTask()">
+        <span *ngIf="!getValidator().isNameValid() && getChangeDetector().isNameChanged()"
+        class="invalid-feedback">Nazwa nie może być pusta</span>
+    </div>
 </ng-template>
 
 <ng-template #task_description>
-    <textarea class="form-control" id="task-description" name="description" rows="4"
+    <div class="form-container">
+        <textarea class="form-control" id="task-description" name="description" rows="4" placeholder="Opis"
             [ngModel]='getModel().getTask().getDescription()' (ngModelChange)="getModel().getTask().setDescription($event)"
-            (keyup.enter)="updateTask()" (focusout)="updateTask()"></textarea>
+            (keyup.enter)="updateTask()" (focusout)="updateTask()">
+        </textarea>
+    </div>
 </ng-template>
 
 <ng-template #task_status>
+    <label class="form-label">Status</label>
     <select class="form-control" id="task-status" name="status"
             [ngModel]='getModel().getTask().getStatus()' (ngModelChange)="getModel().getTask().setStatus($event)"
-            (change)="updateTask()">
+            (change)="updateTask()" >
         <option [ngValue]="status.STARTED">Aktywny</option>
         <option [ngValue]="status.ENDED">Zakończony</option>
         <option [ngValue]="status.CANCELED">Anulowany</option>
@@ -130,53 +110,79 @@
 </ng-template>
 
 <ng-template #task_priority>
-    <select class="form-control" id="task-priority" name="priority"
-            [ngModel]='getModel().getTask().getPriority()' (ngModelChange)='getModel().getTask().setPriority($event)'
-            (change)="updateTask()">
-        <option [ngValue]="null" ></option>
-        <option [ngValue]="priority.LEVEL_1">1</option>
-        <option [ngValue]="priority.LEVEL_2">2</option>
-        <option [ngValue]="priority.LEVEL_3">3</option>
-        <option [ngValue]="priority.LEVEL_4">4</option>
-        <option [ngValue]="priority.LEVEL_5">5</option>
-    </select>
+    <div class="form-container">
+        <label class="form-label"> Priorytet</label>
+        <select class="form-control" id="task-priority" name="priority"
+                [ngModel]='getModel().getTask().getPriority()' (ngModelChange)='getModel().getTask().setPriority($event)'
+                (change)="updateTask()">
+            <option [ngValue]="null" ></option>
+            <option [ngValue]="priority.LEVEL_1">1</option>
+            <option [ngValue]="priority.LEVEL_2">2</option>
+            <option [ngValue]="priority.LEVEL_3">3</option>
+            <option [ngValue]="priority.LEVEL_4">4</option>
+            <option [ngValue]="priority.LEVEL_5">5</option>
+        </select>
+    </div>
 </ng-template>
 
 <ng-template #task_date>
-    <div class="datepicker-container">
-        <input matInput class='form-control' id="task-date" name="date" autocomplete="off"
-        [matDatepicker]="datePicker"
-        [ngModel]='getModel().getTask().getDate()' (ngModelChange)="getModel().getTask().setDate($event)"
-        (dateChange)="updateTask()">
-        <mat-datepicker-toggle [for]="datePicker" class="datepicker"></mat-datepicker-toggle>
-        <mat-datepicker #datePicker></mat-datepicker>      
+    <div class="form-container">
+        <label class="form-label">Data</label>
+        <div class="datepicker-container">
+            <input matInput class='form-control' id="task-date" name="date" autocomplete="off"
+            [matDatepicker]="datePicker"
+            [ngModel]='getModel().getTask().getDate()' (ngModelChange)="getModel().getTask().setDate($event)"
+            (dateChange)="updateTask()">
+            <mat-datepicker-toggle [for]="datePicker" class="datepicker"></mat-datepicker-toggle>
+            <mat-datepicker #datePicker></mat-datepicker>      
+        </div>
     </div>
 </ng-template>
 
 <ng-template #task_time>
-    <div class="time-container">
-        <input paraInput class="form-control" [paraTimepickerTrigger]="picker" >
-        <para-timepicker #picker [time]="getTime()" (timeChange)="timeChange($event)"></para-timepicker>
-       <!-- <input class="form-control" [ngxTimepicker]="timepicker" >
-       <ngx-material-timepicker #timepicker [defaultTime]="getTime()" (timeChanged)="timeChange($event)"></ngx-material-timepicker> -->
+    <div class="form-container">
+        <label class="form-label">Godzina</label>
+        <div class="time-container">
+            <input paraInput class="form-control" [paraTimepickerTrigger]="picker" >
+            <para-timepicker #picker [time]="getTime()" (timeChange)="timeChange($event)"></para-timepicker>
+        </div>
     </div>
 </ng-template>
 
 <ng-template #task_end_date>
-    <div class="datepicker-container">
-        <input matInput class='form-control' id="task-end-date" name="end-date" autocomplete="off"
-        [matDatepicker]="endDatePicker"
-        [ngModel]='getModel().getTask().getEndDate()' (ngModelChange)="getModel().getTask().setEndDate($event)"
-        (dateChange)="updateTask()">
-        <mat-datepicker-toggle [for]="endDatePicker" class="datepicker"></mat-datepicker-toggle>
-        <mat-datepicker #endDatePicker></mat-datepicker>
-    </div>  
+    <div class="form-container">
+        <label class="form-label">Data końcowa</label>
+        <div class="datepicker-container">
+            <input matInput class='form-control' id="task-end-date" name="end-date" autocomplete="off"
+            [matDatepicker]="endDatePicker"
+            [ngModel]='getModel().getTask().getEndDate()' (ngModelChange)="getModel().getTask().setEndDate($event)"
+            (dateChange)="updateTask()">
+            <mat-datepicker-toggle [for]="endDatePicker" class="datepicker"></mat-datepicker-toggle>
+            <mat-datepicker #endDatePicker></mat-datepicker>
+        </div>  
+    </div>
+    
 </ng-template>
 
 <ng-template #task_planned_time>
-    <input type='number' class="form-control" id="task-planned_time" name="planned_time" autocomplete="off"
-            min="1" (keyup.enter)="updateTask()" (focusout)="updateTask()"
-            [ngModel]="getModel().getTask().getPlannedTime()" (ngModelChange)="getModel().getTask().setPlannedTime($event)">
+    <div class="form-container">
+        <label class="form-label">Planowany czas</label>
+        <input type='number' class="form-control" id="task-planned_time" name="planned_time" autocomplete="off"
+        min="1" (keyup.enter)="updateTask()" (focusout)="updateTask()"
+        [ngModel]="getModel().getTask().getPlannedTime()" (ngModelChange)="getModel().getTask().setPlannedTime($event)">
+    </div>
+</ng-template>
+
+<ng-template #task_stage>
+    <div class="form-container">
+        <label class="form-label">Etap</label>
+        <select class="form-control" name="task-stage"
+            [ngModel]="getModel().getTask().getProjectStageID()" (ngModelChange)="getModel().getTask().setProjectStageID($event)"
+            (change)="updateTask()">
+            <option [ngValue]="null"></option>
+            <option *ngFor="let stage of getModel().getStages()" [ngValue]="stage.getId()">{{stage.getName()}}</option>
+        </select>
+    </div>
 </ng-template>
 
 <ng-template #task_labels_group>
@@ -195,15 +201,6 @@
     </button>
     <!-- TODO: można to zrobić w ten sposób, że ostatnią pozycją będzie dodaj inną -->
     <button class="form-control button small-button" id="manage-label-button" (click)="openLabelsManager()">Zarzadzaj etykietami</button>
-</ng-template>
-
-<ng-template #task_stage>
-    <select class="form-control" name="task-stage"
-            [ngModel]="getModel().getTask().getProjectStageID()" (ngModelChange)="getModel().getTask().setProjectStageID($event)"
-            (change)="updateTask()">
-        <option [ngValue]="null"></option>
-        <option *ngFor="let stage of getModel().getStages()" [ngValue]="stage.getId()">{{stage.getName()}}</option>
-    </select>
 </ng-template>
 
 <ng-template #task_subtasks_group>
